--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "peerDependencies": {
     "@nestjs/common": "^8.0.0 || ^9.0.0 || ^10.0.0",
     "@nestjs/core": "^8.0.0 || ^9.0.0 || ^10.0.0",
-    "file-type": "^16.0.0 || ^17.0.0 || ^18.0.0",
+    "file-type": "^16.0.0",
     "nanoid": "^3.3.6"
   },
   "files": [
